--- a/canvas.html
+++ b/canvas.html
@@ -28,7 +28,7 @@ var myGameArea = {
 
 </script>
 
-<p>We have created a game area! (or at least an empty canvas)</p>
+<pEmpty Game Canvas/Area</p>
 
 </body>
 </html>
